# tablambda

./: .gitignore  .mcp.json  CLAUDE.md  GEMINI.md  LICENSE  README.md  flake.nix  package-lock.json  package.json  pyproject.toml
.claude/skills/blind-read/: SKILL.md  strip-comments.py
.claude/skills/claim-audit/: SKILL.md
.claude/skills/dependency-management/: SKILL.md
.claude/skills/jupyter-debugging/: SKILL.md
.claude/skills/nix-commands/: SKILL.md
.claude/skills/paper-writing/: SKILL.md
.claude/skills/python-conventions/: SKILL.md
.github/workflows/: ci.yml
dev/: flake.nix
modules/: codex.nix  dev.nix  doi-mcp.nix  jupyter.nix  python.nix  texlive.nix
paper/: tablambda.tex
papers/co-lambda/: .gitignore  co-lambda.tex  latexmkrc  legacy-draft.tex  preprint.tex  references.bib  submission.tex  supplement-xref.tex  supplement.tex  xr-tocindent-filter.tex
